# MJDJS

./: Cargo.toml
proto/: scheduler.proto
reference/: scheduler.rs
resources/misc/: context.txt  context2.txt  decisions.md  phase1.txt  phase2.txt  phase3.txt  phase4.txt  resourcesbyweek.txt
scheduler-client/: Cargo.toml
scheduler-core/: Cargo.toml  build.rs
scheduler-core/proto/: scheduler.proto
scheduler-core/src/: conversion.rs  job_data_structures.rs  lib.rs  state_machine.rs
scheduler-server/: Cargo.toml
scheduler-server/src/: main.rs  service.rs
src/: job_data_structures.rs  lib.rs  scheduler.rs  state_machine.rs  worker.rs
worker-agent/: Cargo.toml
