[package]
name = "scheduler-core"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.4"
tonic = "0.14.6"
ordered-float = "5.3.0"
rand = "0.10.1"
thiserror = "2.0.18"
tonic-prost = "0.14.6"
prost-types = "0.14"
uuid = { version = "1.24.0", features = ["v7"] }

[build-dependencies]
tonic-prost-build = "0.14.6"
